--- a/arch/arm64/configs/cetibox_x3_debug_defconfig
+++ b/arch/arm64/configs/cetibox_x3_debug_defconfig
@@ -454,6 +454,7 @@ CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_GPIO_MAX77620=y
 CONFIG_POWER_AVS=y
+CONFIG_POWER_RESET_CETIBOX_POWEROFF=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
 CONFIG_POWER_RESET_RESTART=y
