--- a/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3ulcb-gweb-v2.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3ulcb-gweb-v2.dts
@@ -183,6 +183,20 @@
 		compatible = "renesas,vspm_if";
 	};
 
+	versaclock5_out3: versaclk-3 {
+		compatible = "fixed-clock";
+		#clock-cells = <0>;
+		/* Initial value of versaclock out3 */
+		clock-frequency = <33000000>;
+	};
+
+	versaclock5_out4: versaclk-3 {
+		compatible = "fixed-clock";
+		#clock-cells = <0>;
+		/* Initial value of versaclock out4 */
+		clock-frequency = <33000000>;
+	};
+
 	hdmi0-out {
 		compatible = "hdmi-connector";
 		type = "a";
@@ -377,8 +391,8 @@
 			 <&cpg CPG_MOD 721>,
 			 <&cpg CPG_MOD 727>,
 			 <&versaclock5 1>,
-			 <&versaclock5 3>,
-			 <&versaclock5 4>,
+			 <&versaclock5_out3>,
+			 <&versaclock5_out4>,
 			 <&versaclock5 2>;
 	clock-names = "du.0", "du.1", "du.2", "du.3", "lvds.0",
 				  "dclkin.0", "dclkin.1", "dclkin.2", "dclkin.3";
