Add missing options to cetibox defconfig
- Enable ASoC simple sound card
- Enable dynamic debug

(cherry picked from commit 0aeb9004df810af75e3e4373ba12b1c220fe233a)

--- a/arch/arm64/configs/cetibox_x3_defconfig
+++ b/arch/arm64/configs/cetibox_x3_defconfig
@@ -438,6 +438,7 @@ CONFIG_SERIAL_SH_SCI_CONSOLE=y
 CONFIG_SERIAL_SH_SCI_EARLYCON=y
 CONFIG_SERIAL_SH_SCI_DMA=y
 # CONFIG_HW_RANDOM is not set
+CONFIG_CHAR_CROSSTIMESTAMP=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MUX=y
 CONFIG_I2C_MUX_PCA954x=y
@@ -512,6 +513,7 @@ CONFIG_SND_ALOOP=m
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_RCAR=y
 CONFIG_SND_SOC_AK4613=y
+CONFIG_SND_SIMPLE_CARD=y
 CONFIG_UHID=m
 CONFIG_USB=y
 CONFIG_USB_OTG=y
@@ -624,6 +626,7 @@ CONFIG_NLS_ISO8859_15=m
 CONFIG_NLS_KOI8_R=m
 CONFIG_NLS_UTF8=y
 CONFIG_PRINTK_TIME=y
+CONFIG_DYNAMIC_DEBUG=y
 CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_INFO_REDUCED=y
 CONFIG_DEBUG_INFO_SPLIT=y
@@ -652,4 +655,3 @@ CONFIG_CRYPTO_CRC32_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_XZ_DEC=m
-CONFIG_CHAR_CROSSTIMESTAMP=y
