dtb: Enable power button on GWEB v2
(cherry picked from commit fe60c91ef2e290c70f3730d51a7c635a83b663f7)

--- a/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3ulcb-gweb-v2.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3ulcb-gweb-v2.dts
@@ -97,6 +97,12 @@
 			debounce-interval = <20>;
 			gpios = <&gpio6 11 GPIO_ACTIVE_LOW>;
 		};
+
+		key-pwr {
+			linux,code = <KEY_POWER>;
+			label = "POWER";
+			gpios = <&gpio2 5 GPIO_ACTIVE_HIGH>;
+		};
 	};
 
 	reg_1p8v: regulator0 {
