--- a/arch/arm64/configs/cetibox_x3_debug_defconfig
+++ b/arch/arm64/configs/cetibox_x3_debug_defconfig
@@ -515,6 +515,7 @@ CONFIG_SND_SOC_RCAR=y
 CONFIG_SND_SOC_AK4613=y
 CONFIG_SND_SIMPLE_CARD=y
 CONFIG_UHID=m
+CONFIG_HID_MULTITOUCH=m
 CONFIG_USB=y
 CONFIG_USB_OTG=y
 CONFIG_USB_XHCI_HCD=y
