arm64/configs: Configured EEPROM in device tree and activated driver.

--- a/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3ulcb-gweb-v2.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3ulcb-gweb-v2.dts
@@ -562,6 +562,12 @@
 	clock-frequency = <100000>;
 	pinctrl-0 = <&i2c5_pins>;
 	pinctrl-names = "default";
+
+	eeprom@50 {
+		compatible = "microchip,24c16", "atmel,24c16";
+		reg = <0x50>;
+		pagesize = <16>;
+	};
 };
 
 &rcar_sound {
