arm64: dts: cetibox: Force USB channel 0 to host for INIC
Since the ID pin is not correctly pulled on the GWEB board, force the
USB controller to host mode to connect the MOST INIC.

--- a/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3ulcb-gweb-v2.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3ulcb-gweb-v2.dts
@@ -627,12 +627,19 @@
 	status = "okay";
 };
 
+&hsusb {
+	dr_mode = "host";
+	status = "okay";
+};
+
 &ehci0 {
 	status = "okay";
+	dr_mode = "host";
 };
 
 &ohci0 {
 	status = "okay";
+	dr_mode = "host";
 };
 
 &ehci1 {
