--- a/drivers/ptp/Kconfig
+++ b/drivers/ptp/Kconfig
@@ -7,6 +7,7 @@ menu "PTP clock support"
 config PTP_1588_CLOCK
 	tristate "PTP clock support"
 	depends on NET && POSIX_TIMERS
+	imply CHAR_CROSSTIMESTAMP
 	select PPS
 	select NET_PTP_CLASSIFY
 	help
