--- a/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3vc2.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3vc2.dtsi
@@ -263,6 +263,13 @@
 
 		status = "okay";
 	};
+
+	cetibox-power {
+		status = "okay";
+		compatible = "cetitec,cetibox-poweroff";
+		wakecpld = <&i2c5 0x3C>; /* i2c bus, i2c addr */
+		wakecpld-config = <&i2c1 0x60>; /* i2c bus, i2c addr */
+	};
 };
 
 &audio_clk_a {
