--- a/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3ulcb-gweb-v2.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3ulcb-gweb-v2.dts
@@ -744,7 +744,7 @@
 	};
 
 	/* Ethernet switch 1, configured by userspace. */
-	spidev@1 {
+	switch1: spidev@1 {
 		compatible = "nxp,sja1105";
 		reg = <1>;
 		spi-max-frequency = <66666666>;
@@ -754,16 +754,21 @@
 
 		phy-handles = <&phy1 1>, <&phy2 4>;
 		phy-modes = "rmii", "rgmii";
+
+		sja-host-port = <&avb 3>;
+		sja-cascade-port = <&switch2 2>;
 	};
 
 	/* Ethernet switch 2, configured by userspace. */
-	spidev@2 {
+	switch2: spidev@2 {
 		compatible = "nxp,sja1105";
 		reg = <2>;
 		spi-max-frequency = <66666666>;
 		spi-cpha;
 		renesas,dtdl = <200>;
 		renesas,syncdl = <300>;
+
+		sja-host-port = <&switch1 3>;
 	};
 };
 
