hdmi-8ch-audio: dts: update connection from adv748x to the R-Car SoC sound card
Reference the MCLK provided by the ADV7482 from the R-Car sound card.

As all known variants of the Salvator board have the HDMI decoder
chip (the ADV7482) connected to the SSI4 on R-Car SoC, the ADV7482
endpoint and the connection definitions are placed in the common board
file.

For the same reason, the CLK_C clock line and I2C configuration (similar
to the ak4613, on the same interface) are added into the common file.

Also add ssi4_ctrl pin group in the sound pins. The pins are
responsible for SCK4 (sample clock) WS4 and (word boundary input),
and are required for SSI audio input over I2S.

The adv748x shall provide its own implementation of the output clock
(MCLK), connected to the audio_clk_c line of the R-Car SoC.

If the frequency of the ADV748x MCLK were fixed, the clock
implementation were not necessary, but it does not seem so: the MCLK
depends on the value in a speed multiplier register and the input sample
rate (48kHz).

Remove audio clock C from the clocks of adv7482.

The clocks property of the video-receiver node lists the input
clocks of the device, which is quite the opposite from the
original intention: the adv7482 on Salvator X boards is a
provider of the MCLK clock for I2S audio output.

Remove old definition of &sound_card.dais and reduce size of changes
in the Salvator-X specific device tree source.

Declare video-receiver a clock producer, as the adv748x driver
implements the master clock used I2S audio output.

Suggested-by: Geert Uytterhoeven <geert@linux-m68k.org>

The driver provides only MCLK clock, not the SCLK and LRCLK,
which are part of the I2S protocol.

Suggested-by: Laurent Pinchart <laurent.pinchart@ideasonboard.com>

--- a/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3vc2.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3vc2.dtsi
@@ -397,20 +397,17 @@
 
 	clock-frequency = <100000>;
 
-	video-receiver@70 {
+	adv7482_hdmi_in: video-receiver@70 {
 		compatible = "adi,adv7482";
 		reg = <0x70>;
 
 		#address-cells = <1>;
 		#size-cells = <0>;
-		#sound-dai-cells = <0>;
+		#clock-cells = <0>; /* the MCLK for I2S output */
 
 		interrupts-extended = <&gpio5 3 IRQ_TYPE_LEVEL_LOW
 				       &gpio6 4 IRQ_TYPE_LEVEL_LOW>;
 		interrupt-names = "intrq1", "intrq2";
-
-		clocks = <&rcar_sound 3>, <&audio_clk_c>;
-		clock-names = "clk-hdmi-video", "clk-hdmi-i2s-mclk";
 
 		port@8 {
 			reg = <8>;
@@ -443,8 +440,9 @@
 		port@c {
 			reg = <12>;
 
-			adv7482_i2s_endpoint: endpoint {
+			adv7482_i2s: endpoint {
 				remote-endpoint = <&rsnd_endpoint_i2s_tdm_in>;
+				system-clock-direction-out;
 			};
 		};
 	};
@@ -790,6 +788,7 @@
 		 <&cpg CPG_MOD 1020>, <&cpg CPG_MOD 1021>,
 		 <&cpg CPG_MOD 1019>, <&cpg CPG_MOD 1018>,
 		 <&audio_clk_a>, <&cs2000>,
+		 <&adv7482_hdmi_in>,
 		 <&cpg CPG_CORE CPG_AUDIO_CLK_I>;
 	clock-names = "ssi-all",
 		      "ssi.9", "ssi.8", "ssi.7", "ssi.6",
@@ -801,7 +800,7 @@
 		      "mix.1", "mix.0",
 		      "ctu.1", "ctu.0",
 		      "dvc.0", "dvc.1",
-		      "clk_a", "clk_b", "clk_i";
+		      "clk_a", "clk_b", "clk_c", "clk_i";
 
 	ports {
 		#address-cells = <1>;
@@ -823,14 +822,14 @@
 		rsnd_port1: port@1 {
 			reg = <1>;
 			rsnd_endpoint_i2s_tdm_in: endpoint {
-				remote-endpoint = <&adv7482_i2s_endpoint>;
+				remote-endpoint = <&adv7482_i2s>;
 
 				dai-tdm-slot-num = <8>;
 				dai-tdm-slot-width = <32>;
 				dai-format = "left_j";
 				mclk-fs = <256>;
-				bitclock-master = <&adv7482_i2s_endpoint>;
-				frame-master = <&adv7482_i2s_endpoint>;
+				bitclock-master = <&adv7482_i2s>;
+				frame-master = <&adv7482_i2s>;
 				system-clock-direction-out;
 
 				capture = <&ssi9>;
