arm64: dts: Configure avb-adg-sync for Cetiboxes
Configure the avb_adg_sync to allow capturing analog and HDMI input
media timestamps, as well as feedback for media clock generated on
avb_counter8[0].

--- a/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3vc2.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3vc2.dtsi
@@ -809,6 +809,8 @@
 		      "dvc.0", "dvc.1",
 		      "clk_a", "clk_b", "clk_c", "clk_i";
 
+	rcar_sound,avb-adg-sync = "ssi.0", "ssi.9", "avb_div8.0", "audio_clk_div.1";
+
 	ports {
 		#address-cells = <1>;
 		#size-cells = <0>;
