--- a/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3ulcb-gweb-v2.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3ulcb-gweb-v2.dts
@@ -614,6 +614,8 @@
 		 <&audio_clk_c>,
 		 <&cpg CPG_CORE R8A7795_CLK_S0D4>;
 
+	rcar_sound,avb-adg-sync = "ssi.0", "0", "avb_div8.0", "audio_clk_div.1";
+
 	ports {
 		#address-cells = <1>;
 		#size-cells = <0>;
