arm64: dts: Configure audio-clk-div for Cetiboxes
Configure the avb_adg_sync to additionally capture timestamps based on
audio_clk_b (CS2000). With the divider of 512 the avb_adg3_sync rate is
48kHz. This provides a 48kHz sample clock to the AVB implementation in the
time domain of the clock used for 48kHz HDMI and analog output without any
ssi_ws being active.

--- a/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3ulcb-gweb-v2.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3ulcb-gweb-v2.dts
@@ -615,6 +615,7 @@
 		 <&cpg CPG_CORE R8A7795_CLK_S0D4>;
 
 	rcar_sound,avb-adg-sync = "ssi.0", "0", "avb_div8.0", "audio_clk_div.1";
+	rcar_sound,audio-clk-div = <0 512 0>;
 
 	ports {
 		#address-cells = <1>;
