--- a/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3vc2.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3vc2.dtsi
@@ -810,6 +810,7 @@
 		      "clk_a", "clk_b", "clk_c", "clk_i";
 
 	rcar_sound,avb-adg-sync = "ssi.0", "ssi.9", "avb_div8.0", "audio_clk_div.1";
+	rcar_sound,audio-clk-div = <0 512 0>;
 
 	ports {
 		#address-cells = <1>;
