arm64: dts: cetibox: Enable HDMI out audio
Adapt the necessary parts from the Salvator devicetree to enable audio on
the HDMI output for CETiBox (v1 and VC2). Change the CETiBox v1 audio setup
to use audio-graph-card instead of simple-audio-card to match the
CETiBox VC2.
Enable the dw-hdmi I2S audio codec.

--- a/arch/arm64/configs/cetibox_x3_defconfig
+++ b/arch/arm64/configs/cetibox_x3_defconfig
@@ -499,6 +499,8 @@ CONFIG_DRM_RCAR_DW_HDMI=y
 CONFIG_DRM_RCAR_LVDS=y
 CONFIG_DRM_RCAR_VSP=y
 CONFIG_DRM_I2C_ADV7511=m
+CONFIG_DRM_DW_HDMI_I2S_AUDIO=m
+CONFIG_DRM_DW_HDMI_CEC=m
 CONFIG_FB_MODE_HELPERS=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
