--- a/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3vc2.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3vc2.dtsi
@@ -156,7 +156,7 @@
 	sound_cards: sound {
 		compatible = "audio-graph-card";
 		label = "rcar-sound";
-		dais = <&rsnd_port0 &rsnd_port1>;
+		dais = <&rsnd_port0 &rsnd_port1 &rsnd_port2>;
 	};
 
 	vcc_sdhi0: regulator-vcc-sdhi0 {
@@ -282,6 +282,13 @@
 			reg = <1>;
 			rcar_dw_hdmi1_out: endpoint {
 				remote-endpoint = <&hdmi1_con>;
+			};
+		};
+
+		port@2 {
+			reg = <2>;
+			rcar_dw_hdmi1_sound_in: endpoint {
+				remote-endpoint = <&rsnd_endpoint2>;
 			};
 		};
 	};
@@ -831,9 +838,21 @@
 				mclk-fs = <256>;
 				bitclock-master = <&adv7482_i2s_endpoint>;
 				frame-master = <&adv7482_i2s_endpoint>;
-				system-clock-direction-out;
 
 				capture = <&ssi9>;
+			};
+		};
+		rsnd_port2: port@2 {
+			reg= <2>;
+			rsnd_endpoint2: endpoint {
+				remote-endpoint = <&rcar_dw_hdmi1_sound_in>;
+
+				dai-format = "i2s";
+				bitclock-master = <&rsnd_endpoint2>;
+				frame-master = <&rsnd_endpoint2>;
+				system-clock-direction-out;
+
+				playback = <&ssi0 &ssi1 &ssi2>;
 			};
 		};
 	};
