ASoC: rsnd: Add "explicit-only-clocks" to prevent use of HDMI in clock by default
The ADG driver automatically selects the "best" clock for 44100 and 48000Hz
audio playback from the configured input clocks. When one of the input
clocks is a special-purpose clock, e.g. the recovered HDMI input audio
clock from the adv748x in the CETiBox, this could result in nonfunctional
analog audio when the special-purpose clock was selected as the best clock.
Add an explicit-only-clocks attribute which blacklists these clocks from
the automatic configuration in the ADG module. These clocks are then only
used when selected with the "SSI Clock Source Override" control.

--- a/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3vc2.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7795-cetibox-h3vc2.dtsi
@@ -808,6 +808,9 @@
 		      "ctu.1", "ctu.0",
 		      "dvc.0", "dvc.1",
 		      "clk_a", "clk_b", "clk_c", "clk_i";
+	/* Never use clk_c (from the HDMI in) as the source of an audio master clock
+	   generated in the ADG automatically. */
+	rcar_sound,explicit-only-clocks = "clk_c";
 
 	rcar_sound,avb-adg-sync = "ssi.0", "ssi.9", "avb_div8.0", "audio_clk_div.1";
 	rcar_sound,audio-clk-div = <0 512 0>;
